# zeno

./: .dockerignore  .gitignore  README.md  config.toml  docker-compose.dev.yml  docker-compose.yml
math/: base.py
zeno-cli/: Pipfile  setup.cfg
zeno-cli/src/zeno_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
zeno-cli/src/zenocli/: compose.py  engine.py  main.py  utils.py  viewer.py
zeno-cli/src/zenocli.egg-info/: PKG-INFO  SOURCES.txt
zeno-cli/zenocli.egg-info/: PKG-INFO  SOURCES.txt
zeno-engine-python/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Pipfile  entry.py  pytest.ini  setup.cfg
zeno-engine-python/api/: main.py
zeno-engine-python/engine/config/: config.py
zeno-engine-python/engine/core/: classical.py  operators.py  partition_geometry.py
zeno-engine-python/engine/fields/: field.py
zeno-engine-python/engine/io/: benchmark.py  export.py  metrics.py
zeno-engine-python/engine/scenes/: scene_registry.py
zeno-engine-python/engine/sim/: base.py  classical_sim.py  controller.py  pgns_sim.py  scenes.py
zeno-engine-python/engine/utils/: diff_ops.py  laplacian.py
zeno-engine-python/engine/vis/: animator.py  legacy_renderer.py  renderer.py  slicer.py  visualizer_3d.py
zeno-engine-python/src/: main.py
zeno-engine-python/src/zeno_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
zeno-engine-python/src/zeno_engine_python.egg-info/: PKG-INFO  SOURCES.txt
zeno-engine-python/src/zenoengine/: main.py
zeno-engine-python/tools/: compare_scene.py  plot_metrics.py
(+49 files in other folders)
