[metadata]
name = zeno-cli
version = 0.1.0
description = Zeno CLI — control interface for engine, viewer, and orchestration
author = James Riordan
license = MIT

[options]
package_dir =
    = src
packages = find:
include_package_data = true
install_requires =
    typer[all]

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    zeno = zenocli.main:app

