[metadata]
name = zeno-engine-python
version = 0.1.0
description = Zeno Engine — symbolic + classical simulation engine for math & physics
author = James Riordan
license = MIT

[options]
package_dir =
    = src
packages = find:
include_package_data = true
install_requires =
    numpy
    numba
    pandas
    pillow
    imageio
    imageio-ffmpeg
    typing-extensions
    fastapi
    uvicorn[standard]

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    zeno-engine = zenoengine.main:main
